<resources>
    <string name="app_name">GustieHub</string>
    <string name="login">Log In to GustieHub</string>
    <string name="email_input">Email Address</string>
    <string name="continue_button">Continue to Google Sign-In</string>
    <string name="welcome_text">Welcome!</string>
    <string name="announcements_text">Announcements</string>
    <string name="see_all_text">See All</string>
    <string name="activity_text">Activity</string>
    <string name="group_text">My Groups</string>"
    <string name="marketplace_text">Marketplace</string>
    <string name="events_text">Events</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="dashboard_text">Dashboard</string>
    <string name="discover_groups_text">Discover Groups</string>
    <string name="join_text">Join Group</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="new_group">Create New Group</string>
    <string name="new_group_name">Group Name</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="study_areas">Majors/Minors</string>
    <string name="class_year">Class Year</string>
    <string name="user_state">Home State</string>
    <string name="full_name">Your Name</string>
    <string name="creating_profile">Tell us about you...</string>
    <string name="make_post">Write a post</string>
    <string name="recent_posts">Recent Posts</string>
    <string name="post_button">Post</string>
    <string name="make_comment">Write a comment</string>
    <string name="group_description">Description</string>
    <string name="group_members">Members</string>
    <string name="upload_image">Upload Image</string>
    <string name="new_group_description">Group Description</string>
    <string name="new_event">Create New Event</string>
    <string name="event_name">Event Name</string>
    <string name="event_location">Event Location</string>
    <string name="event_description">Event Description</string>
    <string name="event_time">Event Time</string>
    <string name="event_date">Event Date</string>
    <string name="event_group">Event Group</string>
    <string name="new_post">New Post</string>
    <string name="post_content">Post Content</string>
    <string name="enable_comments">Enable Comments</string>
    <string name="search_hint">Search page</string>
    <string name="send_message">Send</string>
    <string name="direct_messaging">Chats</string>
    <string name="new_chat">Start a New Chat</string>
    <string name="search_user_hint">Search Users</string>
    <string name="make_listing">Make a Listing</string>
    <string name="item_name">Item </string>
    <string name="price">Price</string>
    <string name="item_description">Item Description</string>
    <string name="upload_a_picture">+ Upload a Picture</string>
</resources>