<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:text="@string/make_listing"
            android:textColor="@color/black"
            android:paddingBottom="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:text="@string/item_name"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/newItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingBottom="12dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:text="@string/price"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/newItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingBottom="12dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:text="@string/item_description"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/newItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingBottom="12dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/upload_a_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/material_dynamic_neutral60"
            android:text="@string/upload_image"
            android:textColor="@color/white"
            android:textSize="18sp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="12dp">
            <Button
                android:id= "@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="18sp"
                android:backgroundTint="@color/gold"/>

            <Button
                android:id= "@+id/buttonConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/gold"/>
        </LinearLayout>




    </LinearLayout>

