<?xml version="1.0" encoding="utf-8"?>
<!--UI to start new chat and search user in dialog box-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:text="@string/new_chat"
        android:textColor="@color/black"
        android:paddingBottom="12dp"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/search_user_hint"
        app:iconifiedByDefault="false"
        android:paddingBottom="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/usersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="12dp">

        <Button
            android:id= "@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:backgroundTint="@color/gold"/>

        <Button
            android:id= "@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/gold"/>
    </LinearLayout>

</LinearLayout>