<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:text="@string/creating_profile"
        android:textColor="@color/black"
        android:paddingBottom="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textSize="18sp"
        android:text="@string/full_name"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/firstName"
            android:hint="First"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="text"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/lastName"
            android:hint="Last"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:text="@string/class_year"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/user_state"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/classYear"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:inputType="number"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/homeState"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:inputType="text"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textSize="18sp"
        android:text="@string/study_areas"
        android:textColor="@color/black"
        android:paddingTop="12dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/areasOfStudy"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:inputType="text"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        android:id="@+id/photoPicker"
        android:layout_marginTop="20sp"
        android:backgroundTint="@color/material_dynamic_neutral60"/>

    <Button
        android:id= "@+id/buttonConfirm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/confirm"
        android:textSize="18sp"
        android:backgroundTint="@color/gold"/>

</LinearLayout>