<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:textSize="50sp"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/announcement_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="14dp"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/announcements_text"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/yellow_rounded_corner_box">

            <Button
                android:id="@+id/see_all_announcements_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/see_all_text"
                android:backgroundTint="@color/gold"
                android:textColor="@color/black"
                android:layout_marginTop="32dp"
                android:padding="14dp"
                android:textSize="20sp"
                android:gravity="start"
                tools:ignore="DuplicateIds" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingTop="18dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/notifications_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="14dp"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/activity_text"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/yellow_rounded_corner_box">

            <Button
                android:id="@+id/see_all_activity_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/see_all_text"
                android:backgroundTint="@color/gold"
                android:textColor="@color/black"
                android:layout_marginTop="32dp"
                android:padding="14dp"
                android:textSize="20sp"
                android:gravity="start"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/my_groups_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="32dp"
                    android:paddingTop="14dp"
                    android:paddingRight="14dp"
                    android:paddingLeft="14dp"
                    android:src="@drawable/group_icon"
                    android:background="@null"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/group_text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/marketplace_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="32dp"
                    android:paddingTop="14dp"
                    android:paddingRight="14dp"
                    android:paddingLeft="14dp"
                    android:src="@drawable/marketplace_icon"
                    android:background="@null"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/marketplace_text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/events_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="32dp"
                    android:paddingTop="12dp"
                    android:paddingRight="14dp"
                    android:paddingLeft="14dp"
                    android:src="@drawable/events_icon"
                    android:background="@null"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:paddingTop="3dp"
                    android:textColor="@color/black"
                    android:text="@string/events_text"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>